--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,18 @@
-<!doctype html>
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Central Joias – alianças e joias em prata 950"
-    />
+    <meta name="description" content="Central Joias - A elegância que você merece." />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/albertojunio/image/upload/v1770310965/central_joias/products/vlgre3eanblfnqep2do5.png" />
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/albertojunio/image/upload/v1770310965/central_joias/products/vlgre3eanblfnqep2do5.png" />
 
     <title>Central Joias</title>
   </head>
-
   <body>
-    <noscript>Você precisa ativar o JavaScript para rodar este site.</noscript>
-
-    <!-- ESSENCIAL: NÃO REMOVER -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
